v1.12.1 - Fixed minor issues with overflow and added more message sample with varying sizes

--- a/client/src/Components/Chat_List/ChatList.module.css
+++ b/client/src/Components/Chat_List/ChatList.module.css
@@ -12,6 +12,7 @@
     align-items: center;
 
     overflow-y: auto;
+    overflow-x: hidden;
     box-sizing: border-box;
 }
 
